--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.techprimers.ci</groupId>
-	<artifactId>travis-ci-example</artifactId>
+	<artifactId>travis-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>travis-ci-example</name>
+	<name>travis-demo</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
