--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,26 @@ jdk:
   - openjdk8
 
 script: ./mvnw clean install
+services:
+  - docker
+before_install:
+  - docker pull openjdk:8-jdk-alpine
 
 
-jobs:
-  include:
-    - stage: Test
-      script: ./mvnw clean test
+#jobs:
+#  include:
+#    - stage: Test
+#      script: ./mvnw clean test
+      
+ script:
+  - mvn test
+  - mvn clean package
+  # Create Docker image for our app and push it to Dockerhub repository
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t travis-demo .
+  - docker images
+  - docker tag travis-demo mukesh9092/travis-demo
+  - docker push mukesh9092/travis-demo
 
 notification:
   email: mthakur@mdsol.com
