deploy file updated

--- a/deploy.yml
+++ b/deploy.yml
@@ -16,6 +16,10 @@ spec:
     spec:
       containers:
       - name: travis
-        image: travis-demo
+        image: index.docker.io/mukesh9092/travis-demo:latest
+        imagePullPolicy: Always
+        command: [ "echo", "SUCCESS" ]
+      imagePullSecrets:
+       - name: Mukesh90926
         ports:
         - containerPort: 80
