--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ script:
 # Create example Redis deployment on Kubernetes.
   - kubectl create -f deploy.yml
 # Make sure created pod is scheduled and running.
-  - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl -n default get pods -lapp=travis-example -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1;echo "waiting for travis-example deployment to be available"; kubectl get pods -n default; done
+  - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl -n default get pods -lapp=travis-demo -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1;echo "waiting for travis-example deployment to be available"; kubectl get pods -n default; done
   - docker push mukesh9092/travis-demo
   - mvn deploy --settings settings.xml
 
