--- a/deploy.yml
+++ b/deploy.yml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Deployment
 metadata:
   name: travis-deployment
@@ -16,10 +16,10 @@ spec:
     spec:
       containers:
       - name: travis-demo
-        image: index.docker.io/mukesh9092/travis-demo:latest
+        image: mukesh9092/travis-demo:latest
         imagePullPolicy: Always
         command: [ "echo", "SUCCESS" ]
       imagePullSecrets:
       - name: Mukesh90926
-        ports:
-        - containerPort: 80
+      ports:
+      - containerPort: 80
