--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ script:
   - chmod +x ./kubectl
   - sudo mv ./kubectl /usr/local/bin/kubectl
   - mkdir ${HOME}/.kube
-  - cp config  ${HOME}/.kube/
-#  - echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
+#  - cp config  ${HOME}/.kube/
+  - echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
 #  - kubectl create secret docker-registry myregistrykey --docker-server=$DOCKER_REGISTRY_SERVER --docker-username=$DOCKER_USERNAME --docker-password=$DOCKER_PASSWORD --docker-email=$DOCKER_EMAIL
   - kubectl apply -f deployment.yml 
 #  - mvn deploy --settings settings.xml
